testsuite/tests/typecheck/should_fail/TcCoercibleFail.stderr
TcCoercibleFail.hs:11:8: error: [GHC-18872]
    • Couldn't match representation of type ‘Int’ with that of ‘()’
        arising from a use of ‘coerce’
    • In the first argument of ‘($)’, namely ‘coerce’
      In the expression: coerce $ one :: ()
      In an equation for ‘foo1’: foo1 = coerce $ one :: ()

TcCoercibleFail.hs:14:8: error: [GHC-18872]
    • Couldn't match type ‘Int’ with ‘Age’
        arising from defaulting the representational equality
          between: m Int
              and: m Age
        arising from a use of ‘coerce’
      • Note: We cannot know what roles the parameters to ‘m’ have;
              we must assume that the role is nominal.
    • In the first argument of ‘($)’, namely ‘coerce’
      In the expression: coerce $ (return one :: m Int)
      In an equation for ‘foo2’: foo2 = coerce $ (return one :: m Int)

TcCoercibleFail.hs:16:8: error: [GHC-18872]
    • Couldn't match type ‘Int’ with ‘Age’
        arising from a use of ‘coerce’
      • Note: The type constructor ‘Map’ has nominal role in its first argument.
    • In the first argument of ‘($)’, namely ‘coerce’
      In the expression: coerce $ Map one () :: Map Age ()
      In an equation for ‘foo3’: foo3 = coerce $ Map one () :: Map Age ()

TcCoercibleFail.hs:18:8: error: [GHC-18872]
    • Couldn't match representation of type ‘Int’
                               with that of ‘Down Int’
        arising from a use of ‘coerce’
      • Note: The data constructor ‘GHC.Internal.Data.Ord.Down’
                of newtype ‘Down’ is not in scope.
    • In the first argument of ‘($)’, namely ‘coerce’
      In the expression: coerce $ one :: Down Int
      In an equation for ‘foo4’: foo4 = coerce $ one :: Down Int
    Suggested fix:
      Add ‘Down’ to the import list in the import of ‘Data.Ord’
      (at TcCoercibleFail.hs:4:1-22).

TcCoercibleFail.hs:21:8: error: [GHC-40404]
    • Reduction stack overflow; size = 201
      When simplifying the following constraint: Coercible () Void
    • In the expression: coerce :: Void -> ()
      In an equation for ‘foo5’: foo5 = coerce :: Void -> ()
    Suggested fix:
      Use -freduction-depth=0 to disable this check
      (any upper bound you could choose might fail unpredictably with
       minor updates to GHC, so disabling the check is recommended if
       you're sure that type checking should terminate)

TcCoercibleFail.hs:26:8: error: [GHC-40404]
    • Reduction stack overflow; size = 201
      When simplifying the following constraint:
        Coercible (Fix (Either Age)) (Either Int (Fix (Either Int)))
    • In the expression: coerce :: Fix (Either Int) -> Fix (Either Age)
      In an equation for ‘foo6’:
          foo6 = coerce :: Fix (Either Int) -> Fix (Either Age)
    Suggested fix:
      Use -freduction-depth=0 to disable this check
      (any upper bound you could choose might fail unpredictably with
       minor updates to GHC, so disabling the check is recommended if
       you're sure that type checking should terminate)

TcCoercibleFail.hs:27:8: error: [GHC-18872]
    • Couldn't match representation of type ‘()’
                               with that of ‘Either Int (Fix (Either Int))’
        arising from a use of ‘coerce’
    • In the expression: coerce :: Fix (Either Int) -> ()
      In an equation for ‘foo7’: foo7 = coerce :: Fix (Either Int) -> ()

